vcluster_versioned_docs/version-0.37.0/production-guide/ai-cloud.mdx
---
title: "AI Cloud: Managed Kubernetes Service"
sidebar_label: AI Cloud
sidebar_position: 3
description: Build a managed Kubernetes service on GPU infrastructure. Day 0, Day 1, and Day 2 path for AI cloud providers.
---

Run a managed Kubernetes service on your GPU infrastructure. Each customer gets an isolated <GlossaryTerm term="tenant-cluster">tenant cluster</GlossaryTerm> with dedicated GPU nodes. Your product is what customers interact with. Platform is the operations layer your team runs behind it.

**Customer access model:** External paying customers, no direct Platform access. **Worker-node model:** Private nodes per customer. See [Choose a worker node model](./choose-worker-node-model.mdx).

**Typical stack:** Standalone (HA) as the <GlossaryTerm term="control-plane-cluster">control plane cluster</GlossaryTerm>. Private nodes per customer cluster. vMetal for bare metal GPU lifecycle. vNode for workload runtime isolation.

<figure>
  <img
    style={{ display: "block", margin: "0 auto", maxWidth: "100%" }}
    src="/docs/img/production-paths/multi-tenant.png"
    alt="Enterprise AI platform architecture: central control plane that creates tenant clusters for customers"
  />
  <figcaption>Central <GlossaryTerm term="control-plane">control plane</GlossaryTerm> managing tenant clusters for customers</figcaption>
</figure>

**What makes this path different:** Customers never access Platform directly. They interact with your product. Platform RBAC locks direct access to your platform engineering team. This architecture also maps to the cluster-level isolation criteria that AI cloud buyers evaluate in frameworks like [ClusterMAX](https://www.vcluster.com/clustermax).

If your customers buy managed model endpoints instead of Kubernetes clusters, start with [Inference Provider: Managed Model Serving](./inference-provider.mdx). That path uses the same GPU infrastructure building blocks, but the customer-facing product boundary is an inference API and endpoint lifecycle instead of a tenant Kubernetes API.

## Day 0: Design decisions

| Decision | Read next | Outcome |
| --- | --- | --- |
| Choose the control plane deployment model | [Standalone deployment](../deploy/control-plane/binary/basics.mdx), [Architecture](../introduction/architecture.mdx) | Control planes as pods on an existing Kubernetes cluster, or Standalone on dedicated CPU nodes. Standalone is the common choice when no prior Kubernetes substrate exists. |
| Plan bare metal GPU provisioning | [vMetal docs](https://www.vmetal.ai/docs/), [Metal3 node provider](/docs/platform/administer/node-providers/metal3), [bare metal overview](/docs/platform/administer/bare-metal/overview) | Decide whether vMetal manages the full machine lifecycle (PXE, OS imaging, BMC, reclaim) or nodes are joined manually or using another provisioner. |
| Define per-customer node isolation | [Private Nodes](../deploy/worker-nodes/private-nodes/overview.mdx), [node requirements](../deploy/worker-nodes/private-nodes/node-requirements.mdx) | Each customer's tenant cluster gets its own dedicated GPU node pool with a separate CNI/CSI, eliminating interference between customers. |
| Plan network isolation | [VPN](../deploy/worker-nodes/private-nodes/vpn.mdx), [Netris integration](../deploy/control-plane/kubernetes-pod/environment/netris.mdx) | Tenant clusters connect to their private nodes over an encrypted VPN tunnel. Netris integration adds switch-level VLAN/VXLAN isolation per tenant. |
| Define the default network policy posture | [Network policy](../configure/vcluster-yaml/policies/network-policy.mdx) | Set a default-deny east-west posture per tenant template and confirm the control plane cluster's CNI enforces it. Some CNIs accept NetworkPolicy objects without enforcing them. |
| Choose runtime isolation model | [vNode docs](https://www.vnode.com/docs/), [Virtual Nodes](../introduction/architecture.mdx#virtual-nodes) | vNode provides kernel-level container isolation without VM overhead. Recommended when customers run privileged workloads, dynamic code execution, or need GPU access using CDI. |
| Choose the GPU scheduling model | [DeviceClasses](../configure/vcluster-yaml/sync/from-host/device-classes.mdx), [DRA ResourceClaims](../configure/vcluster-yaml/sync/to-host/DRA/resourceclaims.mdx) | Device-plugin-style `DeviceClass` sync covers simple, whole-GPU allocation. DRA `ResourceClaim` sync (Pro) supports fine-grained and shared GPU allocation. |
| Plan tenant storage | [Storage classes from host](../configure/vcluster-yaml/sync/from-host/storage-classes.mdx), [CSI storage capacities](../configure/vcluster-yaml/sync/from-host/csi-storage-capacities.mdx) | Decide which storage classes each tenant tier can request (etcd/control-plane storage vs. model weights and checkpoints), and whether to sync host `CSIStorageCapacity` for scheduler-aware placement. |
| Define cluster templates and AI stacks | [Templates](/docs/platform/administer/templates/overview), [Stacks](/docs/platform/next/understand/what-are-stacks), [create a Stack template](/docs/platform/next/administer/templates/create-stack-templates), [Certified Stacks](/docs/platform/integrations/certified-stacks) | Standardize each customer cluster and its AI software. Platform 4.12 includes Certified StackTemplates for dedicated and central NVIDIA Run:ai deployment models; create your own StackTemplates for other schedulers or developer environments. |
| Decide whether to sell inference endpoints | [Inference Provider](./inference-provider.mdx), [Inference serving stacks](../integrations/model-serving.mdx) | If your product abstracts Kubernetes away and exposes model endpoints, use the inference provider path for endpoint templates, serving stack deployment, routing, and autoscaling. |
| Plan the customer-facing provisioning API | [Product control plane on the Platform API](/docs/platform/how-to/product-control-plane), [Projects](/docs/platform/administer/projects/create), [Quotas](/docs/platform/administer/projects/quotas) | Your product API calls Platform to provision tenant clusters. Define the project structure, quota model, and automation hooks that back your customer-facing workflows. |
| Plan durability | [Backing store](../configure/vcluster-yaml/control-plane/components/backing-store/README.mdx), [container control plane HA](../deploy/control-plane/kubernetes-pod/high-availability.mdx), [Standalone HA](../deploy/control-plane/binary/high-availability.mdx), [Platform HA](/docs/platform/maintenance/reliability-scaling/high-availability) | Choose the data store and replica model for Platform and per-customer control planes. |
| Plan security hardening and audit logging | [Security baseline](../security/README.mdx), [CIS hardening guide](../deploy/control-plane/kubernetes-pod/security/hardening-guide/overview.mdx), [Platform audit logging](/docs/platform/configure/platform-configs/audit) | Apply a CIS benchmark baseline to the control plane cluster and decide audit log retention and SIEM integration before onboarding tenants. |

## Day 1: Stand up the first production customer cluster

:::note
Steps 3 and 4 configure Platform for your platform engineering team, not for your customers. Customers provision clusters through your product. Platform access should be restricted to your ops team.
:::

1. Install [vCluster Platform](/docs/platform/install/quick-start-guide). If building from bare metal, deploy [vCluster Standalone](../deploy/control-plane/binary/basics.mdx) first, then move to [Standalone HA](../deploy/control-plane/binary/high-availability.mdx) before production traffic.
2. Configure [backing store](../configure/vcluster-yaml/control-plane/components/backing-store/README.mdx) and [Platform HA](/docs/platform/maintenance/reliability-scaling/high-availability).
3. Configure [SSO](/docs/platform/configure/platform-configs/single-sign-on) and [permissions](/docs/platform/administer/users-permissions/overview) for your platform engineering team.
4. Create [projects](/docs/platform/administer/projects/create), [templates](/docs/platform/administer/templates/overview), [quotas](/docs/platform/administer/projects/quotas), and [Auto Nodes](/docs/platform/administer/node-providers/overview) to back your customer provisioning workflows.
5. Set up [vMetal](https://www.vmetal.ai/docs/) and the [Metal3 node provider](/docs/platform/administer/node-providers/metal3): register BMC credentials, configure PXE networking, define OS images, and verify bare metal hosts reach `available`.
6. Configure per-customer network isolation with [VPN](../deploy/worker-nodes/private-nodes/vpn.mdx) and, if using Netris, the [Netris integration](../deploy/control-plane/kubernetes-pod/environment/netris.mdx). Apply a default-deny [network policy](../configure/vcluster-yaml/policies/network-policy.mdx) per customer template and confirm the control plane cluster's CNI enforces it.
7. Configure per-tier [storage classes](../configure/vcluster-yaml/sync/from-host/storage-classes.mdx) and, if the scheduler needs capacity-aware placement, sync [CSI storage capacities](../configure/vcluster-yaml/sync/from-host/csi-storage-capacities.mdx).
8. Configure GPU scheduling: sync [DeviceClasses](../configure/vcluster-yaml/sync/from-host/device-classes.mdx) for device-plugin allocation, or enable [DRA ResourceClaim sync](../configure/vcluster-yaml/sync/to-host/DRA/resourceclaims.mdx) for fine-grained allocation.
9. Apply the [CIS hardening baseline](../deploy/control-plane/kubernetes-pod/security/hardening-guide/overview.mdx) to the control plane cluster and enable [Platform audit logging](/docs/platform/configure/platform-configs/audit).
10. Install [vNode](https://www.vnode.com/docs/) on eligible GPU nodes. Configure `sync.toHost.pods.runtimeClassName: vnode` in the cluster template.
11. If you use NVIDIA Run:ai, choose a supported deployment model and install the [Run:ai Certified Stacks](/docs/platform/integrations/certified-stacks/runai). Otherwise, [create a StackTemplate](/docs/platform/next/administer/templates/create-stack-templates) for the applications your AI environment requires and [add it to the tenant cluster configuration](/docs/platform/next/use-platform/apps/use-stacks#choose-how-to-install-a-stack).
12. Validate <GlossaryTerm term="multi-tenancy">tenant isolation</GlossaryTerm> from inside the tenant cluster: confirm the customer cannot see the control plane cluster, other tenants, or platform internals.
13. Wire your product API to Platform's provisioning endpoints and test the end-to-end customer onboarding flow.

## Day 2: Operate

| Operation | Read next |
| --- | --- |
| Manage bare metal capacity and machine lifecycle | [Bare metal overview](/docs/platform/administer/bare-metal/overview), [Metal3 node provider](/docs/platform/administer/node-providers/metal3), [vMetal docs](https://www.vmetal.ai/docs/) |
| Monitor platform and tenant workloads | [Fleet Observability](/docs/platform/maintenance/observability/overview), [other architectures](/docs/platform/next/maintenance/monitoring/fleet-metrics-architectures) |
| Operate managed inference endpoints | [Inference Provider](./inference-provider.mdx), [Inference serving stacks](../integrations/model-serving.mdx), [GPU and inference autoscaling](../integrations/gpu-hpa-dcgm.mdx) |
| Upgrade Platform and tenant clusters | [Upgrade vCluster](../manage/upgrade/upgrade-version.mdx), [Upgrade Platform](/docs/platform/maintenance/upgrade-migrate/upgrade) |
| Back up and restore tenant clusters and Platform | [Snapshots](../manage/backup-restore/backup.mdx), [Restore](../manage/backup-restore/restore.mdx), [Platform backup](/docs/platform/maintenance/backup-restore/backup-restore-platform) |
| Manage vNode compatibility during upgrades | [vNode limitations](https://www.vnode.com/docs/limitations/), [vNode configuration](https://www.vnode.com/docs/configuration/) |
| Scale the control plane cluster | [Platform HA](/docs/platform/maintenance/reliability-scaling/high-availability), [multi-region Platform](/docs/platform/administer/clusters/advanced/multi-region/overview) |
| Track GPU utilization and faults for metering and troubleshooting | [GPU observability templates](/docs/platform/maintenance/observability/gpu-observability-templates), [NVSentinel GPU observability](/docs/platform/maintenance/observability/nvsentinel-gpu-observability) |
| Review audit logs and security posture | [Platform audit logging](/docs/platform/configure/platform-configs/audit), [security baseline](../security/README.mdx) |
